# teachers-assistant

./: .env.example  .gitignore  AI-JOB-AUTOMATION-RESEARCH.md  CLAUDE.md  QA-KNOWLEDGE-BASE.md  QA-TESTING-PLAN.md  README.md  RELEASE_NOTES.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.claude/skills/: qa.md
.github/ISSUE_TEMPLATE/: bug_report.md  task.md  (+1 more)
docs/: ISSUE-20-IMPLEMENTATION.md  PRD_TEMPLATE.md  PROGRESS_TRACKER.md  TESTING_DIRECTIVES.md
e2e/: accessibility.spec.ts  auth.spec.ts  dashboard.spec.ts  design-packs.spec.ts  feedback.spec.ts  inspiration.spec.ts  learning-path.spec.ts  library.spec.ts  premium-generation.spec.ts  preview.spec.ts  projects.spec.ts  qa-full-e2e.spec.ts  qa-interactive.spec.ts  settings.spec.ts  staging-api-smoke.spec.ts  wizard.spec.ts
generation-api/: .dockerignore  .env.example  .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json  verify-content.cjs  vitest.config.ts
scripts/: benchmark-ollama-models.cjs  dev-watcher.cjs  scan-artifact-secrets.cjs  scan-ollama-library-namespaces.cjs  smoke-api.cjs  verify-content-quality.cjs
shared/: types.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/nsis/: installer-hooks.nsh
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: design_pack_storage.rs  dialog.rs  file_system.rs  learner_storage.rs  library_storage.rs  mod.rs  ollama.rs  project_storage.rs
supabase/: config.toml
(+281 files in other folders)
